# VulkanRaytracer

./: .gitignore  CMakeLists.txt  CameraController.cpp  CameraController.h  GitLAbSSH[D[D[D[a  GitLAbSSH[D[D[D[a.pub  README.md  main.cpp
ModelLoader/: CMakeLists.txt  DataStructs.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.Cpp  TextureLoader.h
Raytracer/: BLAS.cpp  BLAS.h  CMakeLists.txt  Raytracer.cpp  Raytracer.h  RaytracingShader.cpp  RaytracingShader.h  ShaderBindingTable.cpp  ShaderBindingTable.h  TLAS.cpp  TLAS.h
Raytracer/VGM/: Buffer.cpp  Buffer.h  CmakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandBufferAllocator.cpp  CommandBufferAllocator.h  ComputeShaderProgram.cpp  ComputeShaderProgram.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  Extensions.cpp  Extensions.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderpassBuilder.cpp  RenderpassBuilder.h  RenderpassContext.cpp  Shader.cpp  Shader.h  ShaderProgramContext.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VkBootstrap.cpp  VulkanContext.cpp  VulkanContext.h  VulkanErrorHandling.h
shaders/: BRDF.glsl  CmakeLists.txt  RaytraceIluminationIndirect.rgen  accumulate.comp  colorMap.comp  combine.comp  common.glsl  compileShaders.bat  composit.frag  deffered.frag  dummy.frag  dummy.vert  edgeAvoidingATroisFilter.comp  gBuffer.frag  gBuffer.vert  meanFilter.comp  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceIlumination.rchit  raytraceIlumination.rgen  raytraceIlumination.rmiss  raytraceIluminationDirect.rgen  raytraceShadow.rmiss  raytraceSimple.rchit  raytraceSimple.rgen  raytraceSimple.rmiss  tri.vert
shaders/SPIRV/: RaytraceIluminationIndirectRGEN.spv  accumulateCOMP.spv  accumulateFRAG.spv  colorMapCOMP.spv  colorMapFRAG.spv  combineCOMP.spv  compositFRAG.spv  compositVERT.spv  defferedFRAG.spv  defferedVERT.spv  dummyFRAG.spv  dummyVERT.spv  edgeAvoidingATroisFilterCOMP.spv  edgeAvoidingFilterFRAG.spv  gBufferFRAG.spv  gBufferVERT.spv  meanFilterCOMP.spv  raytraceIluminationDirectRGEN.spv  raytraceIluminationRCHIT.spv  raytraceIluminationRGEN.spv  raytraceIluminationRMISS.spv  raytraceRCHIT.spv  raytraceRGEN.spv  raytraceRMISS.spv  raytraceShadowRMISS.spv  raytraceSimpleRCHIT.spv  raytraceSimpleRGEN.spv  raytraceSimpleRMISS.spv  triVERT.spv
shared/: Vertex.h
